<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_taxi"
            android:icon="@drawable/ic_taxi"
            android:title="@string/item_taxis" />
        <item
            android:id="@+id/nav_leer_qr"
            android:icon="@drawable/ic_qr"
            android:title="@string/item_leer_qr" />
        <item
            android:id="@+id/nav_servicios"
            android:icon="@drawable/ic_history"
            android:title="@string/item_Servicios" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/item_chat" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_account"
            android:title="@string/item_perfil" />
        <item
            android:id="@+id/nav_acerca_de"
            android:icon="@drawable/ic_info"
            android:title="@string/item_acerca_de" />
        <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/ic_exit"
            android:title="@string/item_salir" />
    </group>

</menu>
