<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/modalBottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorBgSheets">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:padding="12dp"
            android:textColor="@color/primary_dark"
            android:text="Agregar una nueva dirección" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="12dp"
            android:src="@drawable/ic_marker"
            android:tint="@color/primary_dark"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp" >

        <Spinner
            android:id="@+id/addressType_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/dir_spinner_title"
            android:layout_gravity="center_vertical"
            android:entries="@array/tipo_direcciones" />

        <!--  Nombre -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/InputLayoutDialog">

            <EditText
                android:id="@+id/input_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <!--  Dirección -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/InputLayoutDialog">

        <EditText
            android:id="@+id/input_direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_direccion_modal"
            android:inputType="textPostalAddress"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginBottom="12dp"/>
    </android.support.design.widget.TextInputLayout>

    <!-- Botones -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true">

            <Button
                android:id="@+id/btn_cancel_direccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bs_cancel"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/primary"
                style="?borderlessButtonStyle" />

            <Button
                android:id="@+id/btn_add_direccion"
                style="?borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_add_direccion"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/accent" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>