<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="12dp"
    android:paddingRight="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="start"
            android:text="Cobro del servicio"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/clave_vale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/valor_vale"
            android:layout_weight="0.6"
            android:hint="@string/clave_vale"
            android:inputType="number"
            android:lines="1"
            android:maxLines="1"
            android:minLines="1" />

        <EditText
            android:id="@+id/valor_vale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:hint="@string/valor_vale"
            android:inputType="number"
            android:lines="1"
            android:maxLines="1"
            android:minLines="1"
            android:textColor="@drawable/edit_text_selector" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_cancelar"
                style="?borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@+id/btn_cobrar"
                android:text="@string/bs_cerrar"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/primary" />

            <Button
                android:id="@+id/btn_cobrar"
                style="?borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:text="@string/bs_finalizar"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/accent" />

        </RelativeLayout>

    </LinearLayout>


</LinearLayout>
