<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_weight="0.5"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="Costo aproximado:"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="left"
                android:layout_weight="0.5"
                android:text="$14.000"/>

        </LinearLayout>


        <EditText
            android:id="@+id/userInputDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/moreinfo_hint"
            android:inputType="textMultiLine"
            android:lines="3"
            android:minLines="2"
            android:maxLines="5" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="end|bottom"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true">

                <Button
                    android:id="@+id/btn_cancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bs_cancel"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textColor="@color/primary"
                    style="?borderlessButtonStyle" />

                <Button
                    android:id="@+id/btn_confirmar"
                    style="?borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="confirmarServicio"
                    android:text="@string/bs_moreInfo_solicitar"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textColor="@color/accent" />

            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
